linked new dependency installer on "download" page

--- a/website/download.html
+++ b/website/download.html
@@ -17,7 +17,7 @@
 			title="Download standalone executable for Windows">Windows standalone executable</a> (no requirements)</li>
 	<li><a href="http://sourceforge.net/projects/pycam/files/pycam/0.5.1/pycam-0.5.1.win32.exe/download"
 			title="Download installer package for Windows">Windows installer</a> +
-		<a href="http://sourceforge.net/projects/pycam/files/pycam/0.5.1/python2.5-gtk-opengl.exe/download"
+		<a href="http://sourceforge.net/projects/pycam/files/dependency-installer/win32/Python2.5/python2.5-gtk-opengl_20120403.exe/download"
 			title="Download requirement installer">Requirement installer</a></li>
 	<li>Linux, MacOS and other:
 		<a href="http://sourceforge.net/projects/pycam/files/pycam/0.5.1/pycam-0.5.1.zip/download" title="Download zip-Archive of PyCAM">zip archive</a> /
